[project]
authors = [
    {name = "Dat", email = "dat@infinitelambda.com"},
]
license = "LICENSE"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=0.0.1",
    "openai-agents>=0.0.6",
]
name = "agent-poc"
dynamic = ["version"]
description = "Agent as code"
readme = "README.md"
keywords = [
    "agent",
]

[project.urls]
repository = "https://github.com/il-dat/agent-poc"

[dependency-groups]
dev = [
    "coverage<8.0.0,>=7.6.3",
    "pytest-mock>=3.14.0",
    "pytest<8.0.0,>=7.2.0",
    "pytest-beartype<1.0.0,>=0.0.2",
    "pytest-cov<6.0.0,>=5.0.0",
    "pre-commit",
    "ruff>=0.11.9",
]
mkdocs = [
    "mkdocs-click>=0.8.1",
    "mkdocs-material>=9.6.3",
    "mike>=2.1.3",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
]

[tool.pdm.build]
includes = ["src"]

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
beartype_packages = 'src'
markers = [
    "not_in_parallel: marks tests that can't run in parallel",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I"]
typing-modules = ["beartype.typing"]
# ignore = ["E501"] # line-length